// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Prompt component matches snapshot (default props) 1`] = `
<Dialog
  content={
    <div
      id="a11y-dialog-desc"
    />
  }
  footerContent={
    <div
      className="prompt-footer"
    >
      <div>
        <Button
          label="bar"
        />
      </div>
      <div>
        <Button
          label="foo"
        />
      </div>
    </div>
  }
  role="alertdialog"
/>
`;

exports[`Prompt component matches snapshot (default props) 2`] = `
<Dialog
  content={
    <div
      id="a11y-dialog-desc"
    />
  }
  footerContent={
    <div
      className="prompt-footer"
    >
      <div>
        <Button
          label="bar"
        />
      </div>
      <div>
        <Button
          label="foo"
        />
      </div>
    </div>
  }
  isOpen={true}
  role="alertdialog"
/>
`;

exports[`Prompt component matches snapshot (set all props) 1`] = `
<Dialog
  content={
    <div
      id="a11y-dialog-desc"
    >
      desc
    </div>
  }
  footerContent={
    <div
      className="prompt-footer"
    >
      <div>
        <Button
          label="bar"
        />
      </div>
      <div>
        <Button
          label="foo"
        />
      </div>
    </div>
  }
  isOpen={true}
  role="alertdialog"
  title="title"
/>
`;
